# kedaarabackend

./: .gitignore  BACKEND_README.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  Performance_Review_API.postman_collection.json  README.md  alembic.ini  backend_api_specification.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  sql_server_schema.sql  start.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  feedback_forms.py  health.py  notifications.py  performance_cycles.py  reviewer_selections.py  users.py
app/core/: __init__.py  config.py  database.py  logging.py  security.py
app/models/: __init__.py  feedback_form.py  notification.py  performance_cycle.py  reviewer_selection.py  user.py
app/repositories/: __init__.py  feedback_form_repository.py  notification_repository.py  performance_cycle_repository.py  reviewer_selection_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  feedback_form.py  notification.py  performance_cycle.py  reviewer_selection.py  user.py
app/services/: __init__.py  feedback_form_service.py  notification_service.py  performance_cycle_service.py  reviewer_selection_service.py  user_service.py
app/utils/: exceptions.py
scripts/: create_admin_user.py  create_simple_users.py  create_users.py  setup.bat  setup.sh  test_app_startup.py  test_db_connection.py  test_health.py  test_login.py  update_pydantic_configs.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_users.py
